--- a/src/app/landing/home/home.html
+++ b/src/app/landing/home/home.html
@@ -8,11 +8,12 @@
 
         <!-- PrimeNG button using Tailwind utility classes via styleClass -->
         <p-button
-            (onClick)="goToLogin()"
+            (click)="goToLogin()"
             [label]="'Get Started'"
             [icon]="'pi pi-sign-in'"
             [styleClass]="'w-full sm:w-48 mx-auto bg-white text-indigo-600 font-semibold p-3 rounded-lg'">
         </p-button>
+
         </div>
     </section>
 </div>
